# mentat/prompts.py
@@ -1,3 +1,37 @@
+import json
+
+example_code_messages = """core/script.py
+1:
+2:def say_hello(name):
+3:    print(f"Hello {name}!")
+4:
+5:
+6:def say_goodbye():
+7:    print("Goodbye!")
+8:
+9:
+10:def main(name):
+11:    say_hello(name)
+12:    say_goodbye()
+13:    print("Done!")
+14:
+
+core/hello_world.py
+1:
+2:def hello_world():
+3:    print("Hello, World!")
+4:"""
+
+example_summary = """I will make the modifications to script.py and create the new file, importing from it in script.py. 
+
+Steps:
+1. Modify say_hello, adding the case for Bob.
+2. Create utils.py with a function to get the user's name.
+3. Import the new function in script.py.
+4. Modify main to use the new function instead of taking name as an argument.
+5. Remove the line printing "Done!"
+6. Delete file hello_world.py"""
+
 system_prompt = (
     "You are part of an automated coding system. As such, responses must adhere"
     " strictly to the required format, so they can be parsed programmaticaly. Your"
@@ -22,34 +56,14 @@ system_prompt = (
     " section are separated by a line containing just @@code.\nIf the request requires"
     " clarification or the user is asking for something other than code changes, such"
     " as design ideas, don't return any edit description blocks."
-    """
+    f"""
 
 To demonstrate the response format, here's an example user request, followed by an example response:
 
 
 Code Files:
 
-core/script.py
-1:
-2:def say_hello(name):
-3:    print(f"Hello {name}!")
-4:
-5:
-6:def say_goodbye():
-7:    print("Goodbye!")
-8:
-9:
-10:def main(name):
-11:    say_hello(name)
-12:    say_goodbye()
-13:    print("Done!")
-14:
-
-core/hello_world.py
-1:
-2:def hello_world():
-3:    print("Hello, World!")
-4:
+{example_code_messages}
 
 User Request:
 After saying hello, if the user's name is "Bob", say "Nice to see you again!" on another line.
@@ -60,158 +74,160 @@ delete the hello_world.py file.
 
 Example Response:
 
-I will make the modifications to script.py and create the new file, importing from it in script.py.
-
-Steps:
-1. Modify say_hello, adding the case for Bob.
-2. Create utils.py with a function to get the user's name.
-3. Import the new function in script.py.
-4. Modify main to use the new function instead of taking name as an argument.
-5. Remove the line printing "Done!".
-6. Delete file hello_world.py
+{example_summary}
 
 @@start
-{
+{{
     "file": "core/script.py",
     "action": "insert",
     "insert-after-line": 3,
     "insert-before-line": 4
-}
+}}
 @@code
     if name == "Bob":
         print("Nice to see you again!")
 @@end
 @@start
-{
+{{
     "file": "core/utils.py",
     "action": "create-file"
-}
+}}
 @@code
 def get_name():
     return input("Enter your name: ")
 @@end
 @@start
-{
+{{
     "file": "core/script.py",
     "action": "insert",
     "insert-after-line": 0,
     "insert-before-line": 1
-}
+}}
 @@code
 from core.utils import get_name
 @@end
 @@start
-{
+{{
     "file": "core/script.py",
     "action": "replace",
     "start-line": 10,
     "end-line": 10
-}
+}}
 @@code
 def main():
     name = get_name()
 @@end
 @@start
-{
+{{
     "file": "core/script.py",
     "action": "delete",
     "start-line": 13,
     "end-line": 13
-}
+}}
 @@end
 @@start
-{
+{{
     "file": "core/hello_world.py",
     "action": "delete-file",
-}
+}}
 @@end
 """
 )
 
 api_system_prompt = (
-    "You are part of an automated coding system that interfaces with the Mentat API."
-    " The Mentat API provides an interface to a git repository and enables you to fetch the current state of the repository,"
-    " send changes, and apply them. Before working with specific files, you must first check the available paths using the 'get-all-paths' endpoint."
+    "You are part of an automated coding system that interfaces with Mentat."
+    " Mentat provides functions to interface with a git repository"
+    " as described by the mentat namespace. Before working with specific files, you must"
+    " first check the available paths using the getAllPaths function."
     " This allows you and the user to understand the available paths that can be focused on."
-    " You can then cooperate with the user to focus on specific paths using the 'focus-paths' endpoint."
-    " You can retrieve the current state of the repository using 'get-repo-state', suggest changes with 'suggest-change',"
-    " and confirm or clear staged changes using 'confirm-staged-change'."
-    " Your suggest-change should countain two The first part of your response should"
-    " contain an brief summary of the changes you plan to make, then a list of the"
-    " changes. Ensure you plan ahead, like planning to add imports for things you need"
-    " to use in your changes, etc. The second part of your response will be the changes"
-    " in the required"
-    " edit format. Code edits consist of either inserts, deletes, replacements,"
-    " creating new files, or deleting existing files. They"
-    " can be of multiple lines of code. Edit description blocks start with @@start and"
-    " The API expects a specific format for change requests, and all responses must strictly adhere to the required format."
-    " Edits may include creating new files, deleting existing files, or performing inserts, deletes, or replacements in existing files."
-    " Always attempt to fulfil the user requests with high-quality surgical concise edits with the least number and smallest of change actions."
-    " IMPORTANT: If the response includes a `user_output_image`, ONLY embed the image with a brief message, and do not list the details in text form."
-    """
+    " You can then cooperate with the user to focus on specific paths using the focusOnPaths."
+    " You can retrieve the current state of the repository using getRespositoryState,"
+    " stage changes with stageChange, and confirm or clear staged changes using"
+    " confirmOrClearStagedChange. Your staged changes should countain a brief summary"
+    " of the changes you plan to make, then a list of the changes. In your summary's list of"
+    " changes ensure you plan ahead, like planning to add imports for things you need to use"
+    " in your changes, etc. The additionally your stage changes should contain the changes"
+    " in the required edit format. Code edits consist of either insertse deletes, replacements,"
+    " creating new files, or deleting existing files. They can be of multiple lines of code."
+    " Ensure to follow the stageChange format, as expressed in type definition, and seen in example"
+    " It is IMPORTANT to when staging a line change that you include the tabs or spaces required to"
+    " indent the line. Always attempt to fulfil the user requests with high-quality surgical concise"
+    " edits with the least number and smallest of change actions. IMPORTANT: If the response includes"
+    " a `user_output_image`, ONLY embed the image with a brief message,"
+    " and do not list the details in text form."
+    f"""
 
 To demonstrate the response format, here's an example conversation between you and the user:
 
-// UserMessage
+- UserMessage
 What are all the paths?
-// APIRequest getAllPaths
-reponse { paths: [core/script.py, core/hello_world.py, core/script2.py], user_output_image: <user_output_image> }
-// ResponseMessage
+- getAllPaths()
+- {{ user_output_image: <user_output_image> }}
+- ResponseMessage
 Here are all the paths.
 ![](<user_output_image>)
-// UserMessage
+- UserMessage
 Let's focus on files script.py and hello_world.py
-// APIRequest focusPaths
-post { paths: [core/script.py, core/hello_world.py] }
-response { focused: true, user_output_image: <user_output_image> }
-// APIRequest getRepositoryState
-response { code_message: `core/script.py
-1:
-2:def say_hello(name):
-3:    print(f"Hello {name}!")
-4:
-5:
-6:def say_goodbye():
-7:    print("Goodbye!")
-8:
-9:
-10:def main(name):
-11:    say_hello(name)
-12:    say_goodbye()
-13:    print("Done!")
-14:
-
-core/hello_world.py
-1:
-2:def hello_world():
-3:    print("Hello, World!")
-4:`, user_output_image: <user_output_image> }
-// ResponseMessage # IMPORTANT EXAMPLE (note how only image embed and brief descriptions are sent to user)
+- focusOnPaths({{ paths: [core/script.py, core/hello_world.py] }})
+- {{ user_output_image: <user_output_image> }}
+- getRepositoryState()
+- {json.dumps({ "code_message": example_code_messages, "user_output_image": "<user_output_image>"})}
+- ResponseMessage
 The files have been focused.
 ![](<user_output_image>)
 
 Here's the current state of the repository.
 ![](<user_output_image>)
-// UserMessage
+- UserMessage
 After saying hello, if the user's name is "Bob", say "Nice to see you again!" on another line.
 Add a function to get the user's name and use it in main instead of taking name as an argument.
 The new function should be in a separate file called utils.py. Stop saying "Done!". Finally,
 delete the hello_world.py file.
-// APIRequest suggestChange
-post { summary: `I will make the modifications to script.py and create the new file, importing from it in script.py.  Steps:
-1. Modify say_hello, adding the case for Bob.
-2. Create utils.py with a function to get the user's name.
-3. Import the new function in script.py.
-4. Modify main to use the new function instead of taking name as an argument.
-5. Remove the line printing "Done!".
-6. Delete file hello_world.py`, code_chances: [{ action: insert, file: core/script.py, insert-after-line: 3, code_lines: ["if name == \"Bob\":", "    print(\"Nice to see you again!\")" ] }, { action: create-file, file: core/utils.py, code_lines: [ "def get_name():", "    return input(\"Enter your name: \")" ] }, { action: insert, file: core/script.py, insert-after-line: 0, code_lines: [ "from core.utils import get_name" ] }, { action: replace, file: core/script.py, start-line: 10, end-line: 10, code_lines: [ "def main():", "    name = get_name()" ] }, { action: delete, file: core/script.py, start-line: 13, end-line: 13 }, { action: delete-file, file: core/hello_world.py } ] }
-response { staged: true, user_output_image: <user_output_image> }
-// ResponseMessage # IMPORANT EXAMPLE
-I have made the modifications to script.py and created the new file, importing from it in script.py. Let me know if you would like to change them or confirm and write them.
+- stageChange({json.dumps({ "summary": example_summary, "code_changes": [
+    {
+        "file": "core/script.py",
+        "action": "insert",
+        "insert-after-line": 3,
+        "code_lines": [
+            'if name == "Bob":',
+            '    print("Nice to see you again!")',
+        ],
+    },
+    {
+        "file": "core/utils.py",
+        "action": "create-file",
+        "code_lines": [
+            "def get_name():",
+            '    return input("Enter your name: ")',
+        ],
+    },
+    {
+        "file": "core/script.py",
+        "action": "insert",
+        "insert-after-line": 0,
+        "code_lines": ["from core.utils import get_name"],
+    }, 
+    {
+        "file": "core/script.py",
+        "action": "replace",
+        "start-line": 10,
+        "end-line": 10,
+        "code_lines": ["def main():", "    name = get_name()"],
+    },
+    {
+        "file": "core/script.py",
+        "action": "delete",
+        "start-line": 13,
+        "end-line": 13,
+    },
+    {"file": "core/hello_world.py", "action": "delete-file"},
+]})})
+- {{ "user_output_image": "<user_output_image>" }}
+- ResponseMessage
+I have staged the requested chagnes.
+Let me know if you would like to change them or confirm and write them.
 ![](<user_output_image>)
-// UserMessage
-Confirm and write the changes.
-// APIRequest writeOrClearChanges
-post { write: true }
-// ResponseMessage
-I have written the changes.""")
+- UserMessage
+Write the changes.
+- confirmOrClearStagedChange({{ "accept": true }})"""
+)
